force-app/main/default/objects/Contract_Information__c/Contract_Information__c.object-meta.xml
<CustomObject>
    <label>契約情報</label>
    <nameField>
        <label>契約情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>