force-app/main/default/objects/Contract_Information__c/fields/AccidentYesNo__c.field-meta.xml
<CustomField>
    <fullName>AccidentYesNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>事故有無</label>
    <type>Checkbox</type>
</CustomField>