force-app/main/default/objects/Contract_Information__c/fields/AccountManagement__c.field-meta.xml
<CustomField>
    <fullName>AccountManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先管理用項目</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>契約情報</relationshipLabel>
    <relationshipName>AccountContract</relationshipName>
    <type>Lookup</type>
</CustomField>