force-app/main/default/objects/Contract_Information__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>契約者住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>