force-app/main/default/objects/Contract_Information__c/fields/CifCode__c.field-meta.xml
<CustomField>
    <fullName>CifCode__c</fullName>
    <label>CIFコード</label>
    <length>15</length>
    <type>Text</type>
</CustomField>