force-app/main/default/objects/Contract_Information__c/fields/CollectiveCode__c.field-meta.xml
<CustomField>
    <fullName>CollectiveCode__c</fullName>
    <label>集団コード</label>
    <length>7</length>
    <type>Text</type>
</CustomField>