force-app/main/default/objects/Contract_Information__c/fields/CollectiveName__c.field-meta.xml
<CustomField>
    <fullName>CollectiveName__c</fullName>
    <label>集団名</label>
    <length>52</length>
    <type>Text</type>
</CustomField>