force-app/main/default/objects/Contract_Information__c/fields/ContractorKana__c.field-meta.xml
<CustomField>
    <fullName>ContractorKana__c</fullName>
    <label>契約者名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>