force-app/main/default/objects/Contract_Information__c/fields/InsuranceFee__c.field-meta.xml
<CustomField>
    <fullName>InsuranceFee__c</fullName>
    <label>合計保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>