force-app/main/default/objects/Contract_Information__c/fields/InsuranceItem__c.field-meta.xml
<CustomField>
    <fullName>InsuranceItem__c</fullName>
    <label>保険種目</label>
    <length>40</length>
    <type>Text</type>
</CustomField>