force-app/main/default/objects/Contract_Information__c/fields/InsurancePeriod__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriod__c</fullName>
    <label>保険終期</label>
    <type>Date</type>
</CustomField>