force-app/main/default/objects/Contract_Information__c/fields/InsurancePeriodA__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodA__c</fullName>
    <label>保険終期日（Aプラン）</label>
    <type>Date</type>
</CustomField>