force-app/main/default/objects/Contract_Information__c/fields/InsurancePeriodB__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodB__c</fullName>
    <label>保険終期日（Bプラン）</label>
    <type>Date</type>
</CustomField>