force-app/main/default/objects/Contract_Information__c/fields/InsurancePeriodC__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodC__c</fullName>
    <label>保険終期日（Cプラン）</label>
    <type>Date</type>
</CustomField>