force-app/main/default/objects/Contract_Information__c/fields/NewPrintingSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>NewPrintingSerialNumber__c</fullName>
    <label>新印刷連番</label>
    <length>8</length>
    <type>Text</type>
</CustomField>