force-app/main/default/objects/Contract_Information__c/fields/NewSecuritiesNumber__c.field-meta.xml
<CustomField>
    <fullName>NewSecuritiesNumber__c</fullName>
    <label>新証券番号</label>
    <length>15</length>
    <type>Text</type>
</CustomField>