force-app/main/default/objects/Contract_Information__c/fields/OrganizationCode__c.field-meta.xml
<CustomField>
    <fullName>OrganizationCode__c</fullName>
    <label>富国生命 組織コード</label>
    <length>6</length>
    <type>Text</type>
</CustomField>