force-app/main/default/objects/Contract_Information__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>払込方法</label>
    <length>140</length>
    <type>Text</type>
</CustomField>