force-app/main/default/objects/Contract_Information__c/fields/PdfFilePass__c.field-meta.xml
<CustomField>
    <fullName>PdfFilePass__c</fullName>
    <label>ＰＤＦファイルフルパス名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>