force-app/main/default/objects/Contract_Information__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>契約者電話番号</label>
    <type>Phone</type>
</CustomField>