force-app/main/default/objects/Contract_Information__c/fields/R_Contact__c.field-meta.xml
<CustomField>
    <fullName>R_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>契約情報</relationshipLabel>
    <relationshipName>R_Contact_ContractInformation</relationshipName>
    <type>Lookup</type>
</CustomField>