force-app/main/default/objects/Contract_Information__c/fields/R_Maturity_Follow_Data__c.field-meta.xml
<CustomField>
    <fullName>R_Maturity_Follow_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>満期フォローデータ名</label>
    <referenceTo>Maturity_Follow_Data__c</referenceTo>
    <relationshipLabel>契約情報</relationshipLabel>
    <relationshipName>R_MaturityFollowData_ContractInformation</relationshipName>
    <type>Lookup</type>
</CustomField>