force-app/main/default/objects/Contract_Information__c/fields/SecuritiesNumber__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesNumber__c</fullName>
    <label>証券番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>