force-app/main/default/objects/Contract_Information__c/fields/SumInsuranceFeeA__c.field-meta.xml
<CustomField>
    <fullName>SumInsuranceFeeA__c</fullName>
    <label>合計保険料（Aプラン）</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>