force-app/main/default/objects/Contract_Information__c/fields/SumInsuranceFeeB__c.field-meta.xml
<CustomField>
    <fullName>SumInsuranceFeeB__c</fullName>
    <label>合計保険料（Bプラン）</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>