force-app/main/default/objects/Contract_Information__c/fields/SumInsuranceFeeC__c.field-meta.xml
<CustomField>
    <fullName>SumInsuranceFeeC__c</fullName>
    <label>合計保険料（Cプラン）</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>