force-app/main/default/objects/Contract_Information__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>異動日</label>
    <type>Date</type>
</CustomField>