force-app/main/default/objects/Contract_Information__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>契約者郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>