force-app/main/default/objects/Contract_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContractorName__c</columns>
    <columns>ContractorKana__c</columns>
    <columns>ZipCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TransferDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PhoneNumber__c</field>
        <operation>equals</operation>
    </filters>
    <label>すべて選択</label>
</ListView>